--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,15 @@
-* {
+body,
+header,
+div,
+ul,
+li,
+h1,
+a,
+h2,
+section,
+p,
+button,
+input {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   padding: 0;
@@ -9,48 +20,63 @@
   text-decoration: none;
 }
 
+input{
+  font-size: 20px;
+  background-color: #dfffe6;
+  border-radius: 5px;
+  font-weight: 200;
+}
+
 img {
   width: 100%;
 }
 
 body {
-  color: #145c23;
+  color: #000000;
+  display: flex;
+  flex-direction: column;
 }
 
 .container {
-  max-width: 1068px;
-  margin: auto;
-  width: 100%;
+  max-width: 1000px;
+  margin: 305px;
+
 }
 
 section {
-  padding: 4rem 0 3rem;
+  display: flex;
+  justify-content: space-between;
+
 }
 
 .carrinho {
-  position: fixed;
-  top: 0;
-  right: 0;
-  width: 360px;
-  min-height: 100vh;
+  width: 600px;
+  height: 600px;
   padding: 20px;
-  background-color: #fff;
   box-shadow: -2px 0 4px hsl(0 4% 15% / 10%);
+  border: solid 1px;
+  overflow-y: scroll;
+  background-color: #dfffe6;
+}
+::-webkit-scrollbar {
+  background-color:#912323;
+  width: 2px;
 }
 
-
 .carrinho-title {
+  color: rgb(0, 0, 0);
   text-align: center;
-  font-size: 1.2rem;
+  font-size: 20px;
   font-weight: 600;
   margin-top: 2rem;
+  border: solid 15px#ffffff;
+  background-color: #ffffff;
 }
 
 .carrinho-box {
   display: grid;
   grid-template-columns: 32% 50% 18%;
   align-items: center;
-  gap: 1rem;
   margin-top: 1rem;
 }
 
@@ -77,6 +103,7 @@ section {
 .carrinho-produc-title {
   font-size: 1rem;
   text-transform: uppercase;
+  
 }
 
 .carrinho-price {
@@ -101,15 +128,21 @@ section {
 
 .total {
   display: flex;
-  justify-content: flex-end;
   margin-top: 1.5rem;
-  border-top: 1px solid #171427;
+  gap: 80px;
+  border: 15px solid #ffffff;
+  background-color: #fff;
+}
+
+.quanty{
+  font-size:  18px; 
+  font-weight: 600;
+
 }
 
 .total-title {
-  font-size: 1rem;
+  font-size: 18px;
   font-weight: 600;
-  text-transform: uppercase;
 }
 
 .btn-buy {
@@ -127,27 +160,31 @@ section {
 
 .btn-buy:hover {
   background-color: #171427;
+  text-transform: uppercase;
+  transition: 0.6s;
 }
 
 .section-title {
-
-  font-size: 2rem;
-  font-weight: 600;
+  font-size: 40px;
+  font-weight: 500;
   text-align: center;
-  margin-top: 3rem;
-  margin-bottom: 3rem;
+  margin-top: 200px;
+  margin-bottom: 60px;
+}
+.section-title:hover{
+  text-transform: uppercase;
 }
 
 header {
+  padding: 23px 0;
   box-shadow: 0 1px 4px hsl(0 4% 15% / 10%);
   position: fixed;
-  top: 0;
-  left: 0;
   width: 100%;
   background-color: #145c23;
 }
 
-.nav {
+.nav-container {
+  margin: 0 118px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -155,20 +192,42 @@ header {
 }
 
 .logo {
-  font-size: 1.1rem;
+  font-size: 30px;
   color: #fff;
-  font-weight: 400;
+  font-weight: 700;
+  line-height: 24px;
+}
+
+.nav-container ul {
+  display: flex;
+  gap: 20px;
+}
+
+.nav-container ul li a {
+  font-size: 28px;
+  color: #fff
+}
+
+.nav-container ul li a:hover{
+ color: #912323;
+ text-transform: uppercase;
+ font-weight: 700;
+ transition: 0.6s;
+
 }
 
 .pesquisar {
   justify-content: center;
-  display: grid;
+  display: flex;
   margin-bottom: 2rem;
-  row-gap: 0.5rem;
+  gap: 40px;
+  border: solid 30px #145c23;
+  background-color: #145c23;
 }
 
-.p1{
-  border: 1px solid #912323;
+
+.p1 {
+  border: 1px solid #000000;
   height: 40px;
   width: 200px;
   margin-top: 1.5rem;
@@ -190,32 +249,33 @@ header {
 
 .btn-pesquisar:hover {
   background-color: #171427;
+  text-transform: uppercase;
+  transition: 0.6s;
 
 }
 
 .shop {
   margin-top: 2rem;
-}
-
-.sessao {
-  color: #fff;
-
+  display: flex;
+  gap: 200px;
 }
 
 .shop-content {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(220px, auto));
-  gap: 1rem
+  grid-template-columns:auto auto auto auto;
+  gap:60px;
 }
 
 .product-box {
-  position: relative;
+  width: 300px;
+  height: 480px;
+
 }
 
 .product-box:hover {
   padding: 10px;
   border: 1px solid #912323;
-  transition: 0.4s;
+  transition: 0.6s;
 
 }
 
